force-app/main/default/objects/Condition_Comment__c/Condition_Comment__c.object-meta.xml
<CustomObject>
    <label>Condition Comment</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>