force-app/main/default/objects/Condition_Comment__c/fields/Comment_Text__c.field-meta.xml
<CustomField>
    <fullName>Comment_Text__c</fullName>
    <description>Comment text</description>
    <label>Comment Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>