force-app/main/default/objects/Condition_Comment__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Condition</description>
    <label>Condition</label>
    <referenceTo>Condition__c</referenceTo>
    <relationshipLabel>Condition Comments</relationshipLabel>
    <relationshipName>Condition_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>