force-app/main/default/objects/Condition_Comment__c/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <description>Created by name</description>
    <formula>IF(
    Portal_Comment__c,
    Condition__r.Transaction__r.Borrower_First_Name__c + &apos; &apos; + Condition__r.Transaction__r.Borrower_Last_Name__c,
    CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>