force-app/main/default/objects/Condition_Comment__c/fields/Portal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Portal_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Portal comment</description>
    <label>Portal Comment</label>
    <type>Checkbox</type>
</CustomField>