force-app/main/default/objects/Condition_Comment__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Public</description>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>